# nfqws2-strategy-generator

./: CMakeLists.txt  README.en.md  README.md
src/: generator.cpp  generator.hpp  main.cpp  pcg_random.hpp
